rats/fixtures/compile_error/good_test.rugo
use "test"

rats "good test passes"
  test.assert_eq(1, 1)
end
